# wutag

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pkger.yml  wutag.rb
.github/workflows/: main.yml  master.yml  release.yml
example/: com.wutag.wutagd.plist  wutagd.service
src/: app.rs  config.rs  lib.rs  main.rs  opt.rs  registry.rs  runner.rs  tags.rs  util.rs
src/xattr/: mod.rs  unix.rs  windows.rs
wutag_cli/: Cargo.toml
wutag_cli/src/: app.rs  client.rs  config.rs  fmt.rs  main.rs  opt.rs  registry.rs  util.rs
wutag_core/: Cargo.toml  color.rs  lib.rs  tag.rs  tags.rs
wutag_core/src/: color.rs  glob.rs  lib.rs  registry.rs  tag.rs
wutag_core/xattr/: mod.rs  unix.rs
wutag_daemon/: Cargo.toml
wutag_daemon/src/: daemon.rs  inotifyd.rs  main.rs  notifyd.rs  registry.rs
wutag_ipc/: Cargo.toml
wutag_ipc/src/: client.rs  lib.rs  payload.rs  request.rs  server.rs
