[package]
name = "wutag"
version = "0.3.0"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"

[[bin]]
name = "wutag"
path = "src/main.rs"

[dependencies]
libc = "0.2"
thiserror = "1"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
serde_json = "1"
serde_cbor = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
walkdir = "2"
colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde_derive"] }
globwalk = "0.8"
rand = "0.8"
base64 = "0.13.0"
