[package]
name = "wutag"
version = "0.4.0"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"

[lib]
name = "wutag_core"
path = "wutag_core/lib.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
thiserror = "1"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
serde_yaml = "0.8"
serde_cbor = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
walkdir = "2"
colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde"] }
globwalk = "0.8"
rand = "0.8"
base64 = "0.13.0"
dirs = "3"