[package]
name = "wutag"
version = "0.5.0-dev"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2021"

[dependencies]
wutag_core = { path = "../wutag_core" }
wutag_ipc = { path = "../wutag_ipc" }

clap = { version = "3", features = ["derive"] }
clap_complete = "3"
colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde"] }
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_yaml = "0.8"
thiserror = "1"

[dev-dependencies]
tempdir = "0.3"
