[package]
name = "wutag_core"
version = "0.5.0"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2021"

[dependencies]
libc = "0.2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.8"
serde_cbor = "0.11"
serde = { version = "1", features = ["derive"] }
colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde"] }
globwalk = "0.8"
rand = "0.8"
base64 = "0.13.0"

[dev-dependencies]
tempdir = "0.3"
